[package]
name = "genshin-signin"
version = "0.1.0"
authors = ["Youmu <johnmave126@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
chrono = "0.4.19"
env_logger = "0.8.3"
log = "0.4.14"
regex = "1.4.3"
reqwest = { version = "0.11.1", features = ["gzip", "json"] }
serde = { version = "1.0.123", features = [ "derive" ] }
serde_json = "1.0.64"
thiserror = "1.0.24"
tokio = { version = "1.2.0", features = ["rt-multi-thread", "macros", "sync"] }
