[package]
name = "genshin-signin"
version = "0.1.0"
authors = ["Youmu <johnmave126@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.48"
chrono = "0.4.19"
env_logger = "0.9.0"
log = "0.4.14"
reqwest = { version = "0.11.6", features = ["gzip", "json"] }
serde = { version = "1.0.130", features = [ "derive" ] }
serde_json = "1.0.71"
thiserror = "1.0.30"
tokio = { version = "1.14.0", features = ["rt-multi-thread", "macros", "sync"] }
